--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ PyQt5==5.15.9
 gtts==2.5.1
 python-docx==1.1.0
 pyttsx3==2.90
-playsound==1.3.0
-requests==2.31.0 
+playsound==1.2.2
+requests==2.31.0
+speechrecognition==3.10.0
+pyaudio==0.2.13
+pydub==0.25.1
+sounddevice==0.4.6 
