feat: Clean up project, add build workflow and cookie docs

--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -2,7 +2,9 @@ name: Build Windows EXE
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - main
+      - feature/build-and-docs
   workflow_dispatch:
   release:
     types: [created]
