--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
-edge-tts==6.1.9
-PyQt5==5.15.9
-gtts==2.5.1
-python-docx==1.1.0
-pyttsx3==2.90
-playsound==1.2.2
-requests==2.31.0
-speechrecognition==3.10.0
-pyaudio==0.2.13
+PyQt6==6.4.2
+PyQt6-sip==13.4.0
+PyQt6-WebEngine==6.4.0
+pyqt6-plugins==6.4.2.2.3
+PyQt6-Qt6==6.4.3
+PyQt6-WebEngine-Qt6==6.4.3
+edge-tts==6.1.10
+gTTS==2.5.1
 pydub==0.25.1
+requests==2.31.0
+beautifulsoup4==4.12.3
+SpeechRecognition==3.10.1
+PyAudio==0.2.14
+PyMuPDF==1.24.1
+python-docx==1.1.2
+playsound==1.2.2
+pyttsx3==2.90
 sounddevice==0.4.6
-numpy 
+numpy
+browser-cookie3==0.19.1 
