chore: Revert workflow to trigger on main only

--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -2,9 +2,7 @@ name: Build Windows EXE
 
 on:
   push:
-    branches: 
-      - main
-      - feature/build-and-docs
+    branches: [ main ]
   workflow_dispatch:
   release:
     types: [created]
